renamed to jotgit

--- a/client/jotgit.jade
+++ b/client/jotgit.jade
@@ -1,7 +1,7 @@
 template(name="home")
   div.container
     div.row
-      h1 gitrt
+      h1 jotgit
       h2 files
       +files
 
@@ -14,7 +14,7 @@ template(name="files")
 template(name="fileEdit")
   div.container
     div.row
-      h1 gitrt
+      h1 jotgit
       a.commit(href='#') save project
       h2 files
       +files
