--- a/client/jotgit.jade
+++ b/client/jotgit.jade
@@ -1,6 +1,7 @@
 template(name="home")
   div.container
     div.row
+      img#logo(src='/images/logos.png')
       h1 jotgit
       h2 files
       +files
@@ -14,6 +15,7 @@ template(name="files")
 template(name="fileEdit")
   div.container
     div.row
+      img#logo(src='/images/logos.png')
       h1 jotgit
       a.commit(href='#') save project
       h2 files
