Adds basic framework to allow file creation

--- a/client/jotgit.jade
+++ b/client/jotgit.jade
@@ -11,6 +11,7 @@ template(name="files")
     each files
       li
         a(href="{{pathFor 'fileEdit' path}}") {{path}}
+  a.createFile(href='#') Create new file
 
 template(name="fileEdit")
   div.container
